<resources>
    <string name="app_name">Project UCC</string>
    <string name="university_of_the">UNIVERSITY OF THE</string>
    <string name="commonwealth">COMMONWEALTH</string>
    <string name="caribbean">CARIBBEAN</string>
    <string name="fostering_leadership">Fostering Leadership</string>
    <string name="and_innovation">and Innovation</string>
    <string name="department_of_information_technology_application">Department of Information Technology Application</string>
    <string name="faculty_staff_directory">STAFF DIRECTORY</string>
    <string name="courses">COURSES</string>
    <string name="admissions">ADMISSIONS</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="email">EMAIL</string>
    <string name="produced_by_kevawn_dunkley">Designed by Kevawn Dunkley © 2023 </string>
    <string name="ucc">UCC</string>
    <string name="information_technology">Information Technology</string>
    <string name="department_application">Department Application</string>
    <string name="faculty_staff_directory_2">Faculty/Staff Directory</string>
    <string name="ucc_2">UCC</string>
    <string name="information_technology_2">Information Technology</string>
    <string name="department_application_2">Department Application</string>
    <string name="courses_2">Courses</string>
    <string name="ucc_3">UCC</string>
    <string name="information_technology_4">Information Technology</string>
    <string name="department_application_3">Department Application</string>
    <string name="course_details_4">Course Details</string>
    <string name="courseCode">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview5">TextView</string>
    <string name="ucc_6">UCC</string>
    <string name="department_application_6">Department Application</string>
    <string name="admissions_1">Admissions</string>
    <string name="information_technology_6">Information Technology</string>
    <string name="join_it_department">In order to join the Information Technology Department, the applicant should possess a minimum of 5 CXC subjects at at least Grade 2. Possession of a laptop with minimum specifications of 8GB of RAM and a intel i5 processor or equivalent is also recommended. Students should be able to think critically and possess problem solving skills.</string>
    <string name="click_here_to_apply">Click Here to Apply</string>
    <string name="ucc_7">UCC</string>
    <string name="information_technology_7">Information Technology</string>
    <string name="department_application_7">Department Application</string>
    <string name="social_media_7">Social Media</string>
    <string name="visit_ucc_socials">Click the respective icons below to visit UCCs respective social media pages.</string>
    <string name="ucc_8">UCC</string>
    <string name="information_technology_8">Information Technology</string>
    <string name="department_application_8">Department Application</string>
    <string name="see_attribution_links_below_8">View attribution links below</string>
    <string name="attribution">Attribution</string>
    <string name="person_studying_main_page">Person Studying(Main Page)</string>
    <string name="book_main_page">Book(Main Page)</string>
    <string name="paper_main_page">Paper(Main Page)</string>
    <string name="social_media_icon_main_page">Social Media Icon(Main Page)</string>
    <string name="email_icon_main_page">Email Icon (Main Page)</string>
    <string name="male_profile_picture_avatar_faculty_staff_page">Male Profile Picture Avatar(Faculty/Staff Page)</string>
    <string name="female_profile_picture_avatar_faculty_staff_page">Female Profile Picture Avatar(Faculty/Staff Page)</string>
    <string name="facebook_icon_social_media_page">Facebook Icon(Social Media Page)</string>
    <string name="attribution_icon_main_page">Attribution Icon(Main Page)</string>
    <string name="instagram_icon_social_media_page">Instagram Icon(Social Media Page)</string>
    <string name="x_icon_social_media_page">X Icon(Social Media Page)</string>
    <string name="youtube_icon_social_media_page">Youtube Icon(Social Media Page)</string>
    <string name="course_code">Course Code</string>
    <string name="course_title">Course Title</string>
    <string name="miss_natalie_rose">Miss Natalie Rose</string>
    <string name="_876_415_2974">876 415 2974</string>
    <string name="ithod_ucc_edu_jm">deanmst@ucc.edu.jm</string>

</resources>