<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    tools:context=".Attribution">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="95dp"
        android:background="#256BBE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="94dp"
        android:layout_height="89dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/ucc_logo" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/ucc_8"
        android:textColor="#FDFAFA"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/information_technology_8"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/department_application_8"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attribution"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_attribution_links_below_8"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="588dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20">

        <TextView
            android:id="@+id/studyingAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_studying_main_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/bookAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_main_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/paperAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paper_main_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/socialMediaAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/social_media_icon_main_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/attributionIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attribution_icon_main_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/maleProfilePictureAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_profile_picture_avatar_faculty_staff_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/femaleProfilePictureAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female_profile_picture_avatar_faculty_staff_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/instagramIconAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instagram_icon_social_media_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/facebookIconAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_icon_social_media_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/twitterIconAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/x_icon_social_media_page"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/youtubeIconAttribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youtube_icon_social_media_page"
            android:textColor="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>